--- a/.github/workflows/stage-workflow.yaml
+++ b/.github/workflows/stage-workflow.yaml
@@ -30,8 +30,9 @@ jobs:
 
     docker_image_build_and_push:
         runs-on: ubuntu-latest
+        needs: build_and_test
         steps:
-            - name: Login to Docker Hub
+            - name: login to Docker Hub
               uses: docker/login-action@v3
               with:
                   username: ${{ env.DOCKERHUB_USERNAME }}
@@ -41,3 +42,11 @@ jobs:
               run: |
                   docker info
                   echo ${DOCKERHUB_USERNAME}
+
+            - name: Set image tag
+              run: echo "TAG=${GITHUB_SHA::10}" >> $GITHUB_ENV
+
+            - name: Build and Push Docker image
+              run: |
+                  docker build -t ${{ env.DOCKERHUB_USERNAME }}/ts-backend:${TAG} .
+                  docker push ${{ env.DOCKERHUB_USERNAME }}/ts-backend:${TAG}
