--- a/.github/workflows/stage-workflow.yaml
+++ b/.github/workflows/stage-workflow.yaml
@@ -16,6 +16,8 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v5
+              with:
+                  ref: stage
 
             - name: setup node js enviroment
               uses: actions/setup-node@v6
@@ -32,6 +34,10 @@ jobs:
         runs-on: ubuntu-latest
         needs: build_and_test
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v5
+              with:
+                  ref: stage
             - name: login to Docker Hub
               uses: docker/login-action@v3
               with:
