--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
+    env_file:
+      - .env
     develop:
       watch:
         - action: sync
