--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
   "homepage": "https://github.com/KavinduGD/portfolio-backend#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
+    "express-async-handler": "^1.2.0",
     "jest": "^30.2.0",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
