--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.96",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
