--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "morgan": "^1.10.1",
+    "@types/morgan": "^1.9.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -39,13 +41,11 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
-    "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/uuid": "^10.0.0",
     "express-async-handler": "^1.2.0",
     "jest": "^30.2.0",
-    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
