--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multer": "^2.0.2",
     "uuid": "^13.0.0",
     "morgan": "^1.10.1",
-    "@types/morgan": "^1.9.10"
+    "@types/morgan": "^1.9.10",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -44,7 +45,6 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/uuid": "^10.0.0",
-    "express-async-handler": "^1.2.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "ts-jest": "^29.4.6",
