--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,56 +14,92 @@ on:
 env:
   DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  MANIFESTS_REPO_TOKEN: ${{ secrets.MANIFESTS_REPO_TOKEN }}
 
 jobs:
-  build_and_test:
-    # closed event triggered by merged PRs only
+  # build_and_test:
+  #   # closed event triggered by merged PRs only
+  #   if: github.event.pull_request.merged == true
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
+  #       with:
+  #         ref: ${{ github.ref_name }}
+
+  #     - name: setup node js enviroment
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: "22.21.0"
+
+  #     - name: Install Dependancies
+  #       run: npm ci
+
+  #     - name: Build application
+  #       run: npm run build
+
+  #     - name: Test application
+  #       run: npm run test
+  # docker_image_build_and_push:
+  #   if: github.event.pull_request.merged == true
+  #   runs-on: ubuntu-latest
+  #   needs: build_and_test
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
+  #       with:
+  #         ref: ${{ github.ref_name }}
+  #     - name: login to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ env.DOCKERHUB_USERNAME }}
+  #         password: ${{ env.DOCKERHUB_TOKEN }}
+
+  #     - name: Set image tag
+  #       run: echo "TAG=${GITHUB_SHA::10}" >> $GITHUB_ENV
+
+  #     - name: Build and Push Docker image
+  #       run: |
+  #         if [ "${{ github.ref_name }}" = "main" ]; then
+  #           IMAGE_NAME="${{ env.DOCKERHUB_USERNAME }}/backend:${TAG}"
+  #         else
+  #           IMAGE_NAME="${{ env.DOCKERHUB_USERNAME }}/stage-backend:${TAG}"
+  #         fi
+  #         echo "Building and pushing image: $IMAGE_NAME"
+  #         docker build -t $IMAGE_NAME .
+  #         docker push $IMAGE_NAME
+
+  update_manifests:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    # needs: docker_image_build_and_push
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          ref: ${{ github.ref_name }}
-
-      - name: setup node js enviroment
-        uses: actions/setup-node@v6
-        with:
-          node-version: "22.21.0"
-
-      - name: Install Dependancies
-        run: npm ci
-
-      - name: Build application
-        run: npm run build
-
-      - name: Test application
-        run: npm run test
-  docker_image_build_and_push:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          ref: ${{ github.ref_name }}
-      - name: login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
-
-      - name: Set image tag
-        run: echo "TAG=${GITHUB_SHA::10}" >> $GITHUB_ENV
-
-      - name: Build and Push Docker image
+      - name: Checkout manifests repo
         run: |
-          if [ "${{ github.ref_name }}" = "main" ]; then
-            IMAGE_NAME="${{ env.DOCKERHUB_USERNAME }}/backend:${TAG}"
-          else
-            IMAGE_NAME="${{ env.DOCKERHUB_USERNAME }}/stage-backend:${TAG}"
-          fi
-          echo "Building and pushing image: $IMAGE_NAME"
-          docker build -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
+          git clone https://x-access-token:${{ env.MANIFESTS_REPO_TOKEN }}@github.com/KavinduGD/portfolio-manifests.git
+          cd portfolio-manifests
+          git checkout main
+          ls -la
+
+      # - name: Update backend image tag
+      #   run: |
+      #     cd portfolio-manifests
+
+      #     if [ "${{ github.ref_name }}" = "main" ]; then
+      #       echo "Updating PROD backend image"
+      #       sed -i "s|\(image: .*backend:\).*|\1${TAG}|g" prod/backend-patch.yaml
+      #     else
+      #       echo "Updating STAGE backend image"
+      #       sed -i "s|\(image: .*stage-backend:\).*|\1${TAG}|g" stage/backend-patch.yaml
+      #     fi
+
+      # - name: Commit and push changes
+      #   run: |
+      #     cd portfolio-manifests
+      #     git config user.name "github-actions"
+      #     git config user.email "github-actions@github.com"
+
+      #     git add .
+      #     git commit -m "chore: update backend image to ${TAG}"
+      #     git push origin main
